--- a/nick.css
+++ b/nick.css
@@ -34,8 +34,7 @@ padding:1px;
 margin: 20px;
 width:440px;
 height: 400px;
-border-radius:10px;
-
+border-radius:10px
 }
 
 .middle{
@@ -71,7 +70,7 @@ background-color:black;
 #blog{
 position: absolute;
 top:10px;
-left:20%;
+left:10%;
 }
 #home{
 position: absolute;
