--- a/nick.css
+++ b/nick.css
@@ -27,9 +27,7 @@ border-radius:10px;
 }
 
 .left{
-position: absolute;
-top: 250px;
-left:10%;
+text-align:left;
 padding:1px;
 margin: 20px;
 width:440px;
