--- a/nick.css
+++ b/nick.css
@@ -20,13 +20,15 @@ text-align:center;
 position: absolute;
 margin:20px;
 top:20px;
-left: 50%;
+text-align:center;
 width:700px;
 height:200px;
 border-radius:10px;
 }
 
 .left{
+position:absolute;
+top:250px;
 text-align:left;
 padding:1px;
 margin: 20px;
@@ -38,7 +40,7 @@ border-radius:10px
 .middle{
 position: absolute;
 top: 250px;
-left:20%;
+text-align:center;
 padding:1px;
 margin:20px;
 width:440px;
@@ -49,7 +51,7 @@ border-radius:10px;
 .right{
 position: absolute;
 top: 250px;
-left:70%;
+text-align:right;
 padding:1px;
 margin:20px;
 width:440px;
