--- a/nick.css
+++ b/nick.css
@@ -30,7 +30,7 @@ border-radius:10px;
 .left{
 position:absolute;
 top:250px;
-text-align:left;
+left:10%;
 padding:1px;
 margin: 20px;
 width:440px;
@@ -41,7 +41,7 @@ border-radius:10px
 .middle{
 position:absolute;
 top:250px;
-text-align:center;
+left:45%;
 padding:1px;
 margin:20px;
 width:440px;
@@ -52,7 +52,7 @@ border-radius:10px;
 .right{
 position: absolute;
 top: 250px;
-text-align:right;
+left: 80%;
 padding:1px;
 margin:20px;
 width:440px;
