--- a/nick.css
+++ b/nick.css
@@ -21,7 +21,7 @@ text-align:center;
 position:absolute;
 margin:20px;
 top:20px;
-text-align:center;
+left:40%;
 width:700px;
 height:200px;
 border-radius:10px;
