--- a/nick.css
+++ b/nick.css
@@ -27,13 +27,14 @@ height:200px;
 
 .left{
 position:absolute;
-left:5%;
 top:250px;
-height: 400px;
+left:0px;
+margin-left:10%;
 }
 
 .middle{
 position: absolute;
+top: 250px;
 left: 50%;
 margin-left: -100px;
 }
@@ -41,9 +42,7 @@ margin-left: -100px;
 
 .right{
 position: absolute;
-left: 75%;
 top: 250px;
-height: 400px;
 }
 
 .nav{
