--- a/nick.css
+++ b/nick.css
@@ -20,7 +20,8 @@ text-align:center;
 .top{
 position:absolute;
 top:20px;
-left:10px;
+left:50%;
+margin-left:-50%;
 width:700px;
 height:200px;
 }
@@ -29,7 +30,6 @@ height:200px;
 position:absolute;
 top:250px;
 left:0px;
-margin-left:10%;
 }
 
 .middle{
