--- a/nick.css
+++ b/nick.css
@@ -15,7 +15,6 @@ font:arial;
 font-size:20px;
 color:black;
 text-align:center;
-width:400px;
 }
 
 .top{
@@ -31,6 +30,7 @@ height:200px;
 position:absolute;
 top:250px;
 left:0px;
+width:400px
 }
 
 .middle{
@@ -38,12 +38,15 @@ position: absolute;
 top: 250px;
 left: 50%;
 margin-left: -100px;
+width:400px;
 }
 }
 
 .right{
 position: absolute;
 top: 250px;
+right:0px;
+width:400px;
 }
 
 .nav{
