--- a/nick.css
+++ b/nick.css
@@ -40,12 +40,11 @@ left: 50%;
 margin-left: -100px;
 width:400px;
 }
-}
 
 .right{
 position: absolute;
 top: 250px;
-left:100%;
+right:0px;
 width:400px;
 }
 
