--- a/nick.css
+++ b/nick.css
@@ -20,7 +20,7 @@ text-align:center;
 position:absolute;
 top:20px;
 left:50%;
-margin-left:-100%;
+margin-left:700px;
 width:700px;
 height:200px;
 }
@@ -36,7 +36,7 @@ width:400px
 position: absolute;
 top:250px;
 left:50%;
-margin-left:-100%;
+margin-left:-400px;
 width:400px;
 }
 
