--- a/nick.css
+++ b/nick.css
@@ -50,7 +50,9 @@ left:10px;
 position: absolute;
 top:10px;
 left:50%;
-margin-left:19.5px;
+width:40px;
+text-align:center;
+margin-left:20px;
 }
 #mystuff{
 position: absolute;
