--- a/nick.css
+++ b/nick.css
@@ -42,11 +42,13 @@ height:50px;
 background-color:black;
 }
 #blog{
+color:white;
 position: absolute;
 top:10px;
 left:40px;
 }
 #home{
+color:white;
 position: absolute;
 top:10px;
 left:50%;
@@ -55,6 +57,7 @@ text-align:center;
 margin-left:20px;
 }
 #mystuff{
+color:white;
 position: absolute;
 top: 10px;
 right:40px;
