--- a/nick.css
+++ b/nick.css
@@ -42,14 +42,16 @@ height:50px;
 background-color:black;
 }
 #blog{
-color:white;
+color:black;
+background-color:white;
 position: absolute;
 top:10px;
 left:40px;
 }
 #home{
 width:40px;
-color:white;
+color:black;
+background-color:white;
 position: absolute;
 top:10px;
 left:50%;
@@ -57,7 +59,8 @@ text-align:center;
 margin-left:-20px;
 }
 #mystuff{
-color:white;
+color:black;
+background-color:white;
 position: absolute;
 top: 10px;
 right:40px;
