--- a/nick.css
+++ b/nick.css
@@ -42,16 +42,14 @@ height:50px;
 background-color:black;
 }
 #blog{
-color:black;
-background-color:white;
+color:white;
 position: absolute;
 top:10px;
 left:40px;
 }
 #home{
 width:40px;
-color:black;
-background-color:white;
+color:white;
 position: absolute;
 top:10px;
 left:50%;
@@ -59,8 +57,7 @@ text-align:center;
 margin-left:-20px;
 }
 #mystuff{
-color:black;
-background-color:white;
+color:white;
 position: absolute;
 top: 10px;
 right:40px;
