--- a/nick.css
+++ b/nick.css
@@ -18,6 +18,7 @@ text-align:center;
 
 .top{
 position:absolute;
+z-index:0;
 top:20px;
 left:50%;
 margin-left:-350px;
@@ -27,6 +28,7 @@ height:200px;
 
 .middle{
 position: absolute;
+z-index:0;
 top:250px;
 left:50%;
 margin-left:-400px;
@@ -35,6 +37,7 @@ width:800px;
 
 .nav{
 position:fixed;
+z-index:1;
 top:0px;
 left:0px;
 width:100%;
