--- a/nick.css
+++ b/nick.css
@@ -73,8 +73,8 @@ height:2350px;
 
 #corner{
 position:absolute;
-max-width:15%;
-max-height:15%;
+max-width:300px;
+max-height:300px;
 right:0px;
 bottom:0px;
 }
