--- a/nick.css
+++ b/nick.css
@@ -1,9 +1,11 @@
 .maintitle{
+opacity:1;
 font-size:80px;
 text-align:center;
 }
 
 .title{
+opacity:1;
 text-align:center;
 font-size:50px;
 color:black;
@@ -11,6 +13,7 @@ font:arial;
 }
 
 .text{
+opacity:1;
 font-size:20px;
 color:black;
 text-align:center;
